# winremote-mcp

./: BACKLOG.md  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  SECURITY_FIXES.md  fix_play.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml
docs/: usage.md  vision-guide.md
skill/hermes/: README.md
src/winremote/: __init__.py  __main__.py  app.py  auth.py  config.py  desktop.py  fastmcp_compat.py  network.py  oauth.py  ocr.py  process_mgr.py  registry.py  security.py  services.py  taskmanager.py  tiers.py  tool_registry.py
src/winremote/tools/: __init__.py  desktop_tools.py  file_tools.py  network_tools.py  registry_tools.py  system_tools.py
tests/: conftest.py  test_config_and_tiers.py  test_desktop_tools.py  test_install.py  test_integration.py  test_network.py  test_oauth.py  test_play_sound.py  test_security_hardening.py  test_shell_tools.py
