[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "winremote-mcp"
version = "0.4.20"
description = "Windows Remote MCP Server - control Windows desktops via MCP protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "winremote contributors" }]
keywords = ["mcp", "windows", "remote", "automation", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
]
dependencies = [
    "fastmcp>=3.2.0",
    "pyautogui>=0.9.54",
    "psutil>=5.9.0",
    "pywin32>=306; sys_platform == 'win32'",
    "Pillow>=12.2.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "thefuzz[speedup]>=0.20.0",
    "tabulate>=0.9.0",
    "markdownify>=0.13.0",
    "authlib>=1.6.11",
    "cryptography>=46.0.7",
    "python-multipart>=0.0.26",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
winremote-mcp = "winremote.__main__:cli"
winremote = "winremote.__main__:cli"

[project.urls]
Homepage = "https://github.com/dddabtc/winremote-mcp"
Repository = "https://github.com/dddabtc/winremote-mcp"
Issues = "https://github.com/dddabtc/winremote-mcp/issues"
Documentation = "https://github.com/dddabtc/winremote-mcp#readme"
Changelog = "https://github.com/dddabtc/winremote-mcp/releases"
Security = "https://github.com/dddabtc/winremote-mcp/security/policy"

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]
dev = ["ruff>=0.9.0", "pytest>=9.0.3", "pygments>=2.20.0"]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "starlette[full]>=0.37.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src/winremote"]
